--- a/index.html
+++ b/index.html
@@ -42,11 +42,14 @@
                     throw new Error("Невірні вхідні дані, перевірте значення.");
                 }
 
+                // Если копейки не введены, используем целое число
                 let useWholeNumbers = false;
                 if (!desiredKopeckStr && totalAmount % 1 === 0) {
                     useWholeNumbers = true;
-                    desiredKopeckStr = '0';
-                } else if (!desiredKopeckStr) {
+                }
+
+                // Если копейки не введены, установить значение по умолчанию
+                if (!desiredKopeckStr) {
                     desiredKopeckStr = '0';
                 }
 
@@ -62,7 +65,7 @@
                     const currentKopeck = Math.round((currentSum % 1) * 100);
 
                     if (useWholeNumbers) {
-                        if (currentKopeck === 0) {
+                        if (currentKopeck % 10 === 0) {
                             nearestGrams = grams;
                             nearestSum = currentSum;
                             break;
