--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <br><br><br>
     <input type="number" id="pricePerKg" placeholder="Ціна за кілограм" step="0.01">
     <input type="number" id="totalAmount" placeholder="Необхідна сумма" step="0.01">
-    <!-- <input type="number" id="desiredKopeck" placeholder="Необхідна копійка"> -->
+    <input type="number" id="desiredKopeck" placeholder="Необхідна копійка">
     <button onclick="calculateNearestGrams()">Розрахувати</button>
     <div class="result" id="resultGrams">Грам необхідно: </div>
     <div class="result" id="resultSum">Сума: </div>
